# budget-envelopes

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
budget_envelopes/: __init__.py  budget_reader.py  cli.py  envelope_stats_calculator.py  plot.py  transactions_reader.py
budget_envelopes/tests/: missingmonths.py
docs/: conf.py  index.rst  requirements.txt
examples/: envelope_adjustments.csv  envelope_budgets.csv  transactions-car.csv  transactions-petstore.json
tests/: __init__.py  budget_adjustments.csv  conftest.py  test_budget_adjustments.py  test_budget_reader.py  test_missingmonths.py  test_transaction_reader.py
