[tool.poetry]
name = "budget-envelopes"
version = "0.3.2"
description = ""
authors = ["Michael P Schroeder <michael.p.schroeder@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
click = "^8.1.7"
matplotlib = "^3.8.0"
python-dateutil = "^2.9.0.post0"


[tool.poetry.scripts]
budget-envelopes = "budget_envelopes.cli:main_cli"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"
black = {version = "^23.10.1", allow-prereleases = true}
ipykernel = "^6.26.0"
pytest = "^8.1.1"
pytest-helpers-namespace = "^2021.12.29"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
sphinx-click = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
